# Workshop-ML-LLM-Server

./: .env  README.md  app.py  docker-compose.yml  mcp_server.py  pyproject.toml  requirements-fastapi.txt  seed_table.py
database-server/: Dockerfile  requirements.txt
docker/: Dockerfile.fastapi  Dockerfile.mcp
mcp-server/: Dockerfile  mcp_server.py  utils.py
